--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Drum Kit</title>
   </head>
   <body>
-    <div class="keys">
+    <div class="key-wrapper">
       <div data-key="65" class="key">
         <kbd>A</kbd>
         <span class="sound">clap</span>
